<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragment.FragmentadminUpdate">
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/admin"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fieldnameadminold"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconMode="clear_text"
        app:helperText="Required*"
        app:helperTextTextColor="@color/red"
        app:startIconDrawable="@drawable/number"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_margin="5dp"
        android:hint="@string/numberold">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/uadmin1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:maxLength="20" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fieldnumberadminnew"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconMode="clear_text"
        app:helperText="Required*"
        app:helperTextTextColor="@color/red"
        app:startIconDrawable="@drawable/number"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_margin="5dp"
        android:hint="@string/numbernew">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/uadmin2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:maxLength="20" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fieldidentadminold"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconMode="password_toggle"
        app:helperText="Required*"
        app:helperTextTextColor="@color/red"
        app:startIconDrawable="@drawable/pass"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_margin="5dp"
        android:hint="@string/passwordold">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/uadmin3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:maxLength="20" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fieldpassadminnew"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconMode="password_toggle"
        app:helperText="Required*"
        app:helperTextTextColor="@color/red"
        app:startIconDrawable="@drawable/pass"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/passwordnew">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/uadmin4"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="numberPassword"
            android:maxLength="20" />
    </com.google.android.material.textfield.TextInputLayout>




    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/admincreate"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        android:layout_marginBottom="324dp"
        android:background="@drawable/btnadmin"
        android:backgroundTint="@color/color_bg_Clibrary"
        android:text="@string/Update"
        android:textColor="@color/white"
        android:textSize="24sp"

        />





</LinearLayout>