<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragment.FragmentuserCreate">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/login"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fieldname"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/name"
        app:helperText="Required*"
        app:helperTextTextColor="@color/red"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        android:layout_margin="5dp"
        app:startIconDrawable="@drawable/name"
        app:endIconMode="clear_text"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed1user"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:maxLength="40" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="5dp"
        android:hint="@string/email"
        app:helperText="Required*"
        app:helperTextTextColor="@color/red"
        app:counterEnabled="true"
        app:counterMaxLength="40"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:startIconDrawable="@drawable/email"
        app:endIconMode="clear_text"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed2user"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:maxLength="40" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fieldpass"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="5dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/password"
        app:helperText="Required*"
        app:helperTextTextColor="@color/red"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:startIconDrawable="@drawable/pass"
        app:endIconMode="password_toggle"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed3user"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:inputType="numberPassword"
            android:maxLength="20" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/usercreate"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="324dp"
        android:layout_margin="10dp"
        android:textColor="@color/white"
        android:background="@drawable/fragmentuttoncaolor"
        android:text="@string/Create"
        android:textSize="24sp"
        />



</LinearLayout>