<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  android:orientation="vertical"
    tools:context=".admin.Colthesa.Updateprofinaldevice">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/updateimage"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_launcher_background" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/Update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="60dp"
        android:layout_marginTop="-60dp"
        android:onClick="Mohamed"
        android:src="@drawable/home" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/Producer"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner4"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:entries="@array/adddeviceadd" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameUpdatedevice"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/name"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconMode="clear_text"
        app:helperText="Required*"
        app:helperTextTextColor="@color/red"
        app:startIconDrawable="@drawable/number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ufina1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:maxLength="20" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/priceUpdatedivace"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/price"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconMode="clear_text"
        app:helperText="Required*"
        app:helperTextTextColor="@color/red"
        app:startIconDrawable="@drawable/number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ufina2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:maxLength="20" />
    </com.google.android.material.textfield.TextInputLayout>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Updatecreatedivaec"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        android:layout_marginBottom="324dp"
        android:background="@drawable/btnadmin"
        android:backgroundTint="@color/color_bg_Clibrary"
        android:text="@string/Updatedevice"
        android:textColor="@color/white"
        android:textSize="24sp"

        />


</LinearLayout>